src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Addition_Information__c</fullName>
        <inlineHelpText>Notes from web forms</inlineHelpText>
        <label>Addition Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_L2_Fields_Filled__c</fullName>
        <label>All L2 Fields Filled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Method_of_Contact__c</fullName>
        <description>This field is used to store Preferred method of contact</description>
        <label>Best Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                    <isActive>false</isActive>
                    <label>Portal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASL_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribe/Opt in per CASL (Canadian Anti-Spam Legislation)</description>
        <inlineHelpText>Must be checked in order to email (sales and marketing)</inlineHelpText>
        <label>CASL Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangedToL2__c</fullName>
        <label>Changed to L2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Profile Changed to L2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_by_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared by Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Apps_Product_Interest__c</fullName>
        <label>Cloud/Apps Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Foundry</fullName>
                </value>
                <value>
                    <fullName>Pivotal TC Server</fullName>
                </value>
                <value>
                    <fullName>Pivotal Web Server</fullName>
                </value>
                <value>
                    <fullName>Pivotal RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>Spring Framework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_to_Billing_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if the contact is associated to Billing Account.</inlineHelpText>
        <label>Connected to Billing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <label>Contact Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will Be Used to select key point contact</description>
        <label>Add / Manage Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPL_Status__c</fullName>
        <formula>IF(
   ISPICKVAL( Export_Status__c, "Denied"), "Restricted",
   
   IF
     (ISPICKVAL( Export_Status__c, "Cleared"),"Unrestricted",

     IF(
        AND(
            OR(
               ISPICKVAL( Export_Status__c, "In Progress"),
               ISPICKVAL( Export_Status__c, "Not Started")
              ),
            OR(
               OR(
                  RPS_Status__c = "Red", 
                  RPS_Status__c = "Double Red",
                  RPS_Status__c = "Triple Red"
                 ),
                AND(
                   RPS_Status__c = "Risk Country",
                   Embargo_Country__c = TRUE
                   ),
                Embargo_Country__c = TRUE
               )
            ), 
            "Restricted",
            "Unrestricted"
      )
    )
  )</formula>
        <label>DPL Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Product_Interest__c</fullName>
        <label>Data Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal HD</fullName>
                </value>
                <value>
                    <fullName>Pivotal Greenplum Database</fullName>
                </value>
                <value>
                    <fullName>Pivotal DCA</fullName>
                </value>
                <value>
                    <fullName>Pivotal Chorus</fullName>
                </value>
                <value>
                    <fullName>Pivotal Performance and Monitoring</fullName>
                </value>
                <value>
                    <fullName>Pivotal Analytics</fullName>
                </value>
                <value>
                    <fullName>Pivotal GemFire</fullName>
                </value>
                <value>
                    <fullName>Pivotal SQLFire</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <description>For deal registration via Marketo, the size of the deal from the partner system</description>
        <label>Deal Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <inlineHelpText>When is this client expected to make a decision to move forward?</inlineHelpText>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>This month</fullName>
                </value>
                <value>
                    <fullName>Within 3 months</fullName>
                </value>
                <value>
                    <fullName>Within 6 months</fullName>
                </value>
                <value>
                    <fullName>Within 1 year</fullName>
                </value>
                <value>
                    <fullName>More than 1 year</fullName>
                </value>
                <value>
                    <fullName>Don't know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Embargo_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Country is currently under Embargo restrictions with the US Government</description>
        <inlineHelpText>Country is currently under Embargo restrictions with the US Government</inlineHelpText>
        <label>Embargo Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To enable contact as the community user</inlineHelpText>
        <label>Open Cases for Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>For deal registration via Marketo, the expected close date of the source opp</description>
        <label>Expected Close Date</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Status__c</fullName>
        <defaultValue>"Not Started"</defaultValue>
        <label>Export Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Time_Login__c</fullName>
        <label>First Time Login</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formula_Address__c</fullName>
        <formula>MailingStreet &amp; BR() &amp; MailingCity &amp; ', ' &amp; MailingState &amp; ' ' &amp; MailingPostalCode &amp; BR() &amp; MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst/Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>C-Level/Executive</fullName>
                </value>
                <value>
                    <fullName>Architect/Team Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_18_digits__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interact_with_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assign User L1 Profile Permissions</description>
        <inlineHelpText>Assign User L1 Profile Permissions</inlineHelpText>
        <label>Interact with Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <defaultValue>"English"</defaultValue>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>English(United States)</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>sv</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>ko</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                    <label>Chinese (Traditional)</label>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Portuguese (Brazil)</label>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>da</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>th</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>fi</fullName>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                    <label>Spanish (Mexico)</label>
                </value>
                <value>
                    <fullName>no</fullName>
                    <label>Norwegian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID_EMC__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID EMC</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID_Pivotal_Labs__c</fullName>
        <label>Legacy ID Pivotal Labs</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_SPRING__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID SPRING</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID_VMWARE__c</fullName>
        <label>Legacy ID VMWARE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_XtremeLab__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID XtremeLab</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Info_ExtremeLab__c</fullName>
        <label>Legacy Info ExtremeLab</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Zendesk_ID__c</fullName>
        <label>Legacy Zendesk ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_OSR__c</fullName>
        <label>Location OSR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_in_user_contact__c</fullName>
        <formula>IF( $User.Id =  CreatedBy.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in user contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Lead_Source_Description__c</fullName>
        <label>Most Recent Lead Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Referrer__c</fullName>
        <description>Marketing field</description>
        <label>Most Recent Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Search_Phrase__c</fullName>
        <description>Marketing field</description>
        <label>Most Recent Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Additional_Info__c</fullName>
        <label>Notes / Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_From_Compliance_Team__c</fullName>
        <label>Notes From Compliance Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSS_Product_Interest_Spring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Spring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Apache_Tomcat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Apache Tomcat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Cloud_Foundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Cloud Foundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Grails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Grails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Groovy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Groovy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_MadLib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:MadLib</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Open_Chorus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Open Chorus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_RabbitMQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:RabbitMQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Project_Interest_Redis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS Project Interest:Redis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>For Marketo Form, deal registrant's opportunity name</description>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_News__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In: News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In: Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source_Description__c</fullName>
        <label>Original Lead Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source__c</fullName>
        <label>Original Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Referral - Non-Federation</fullName>
                </value>
                <value>
                    <fullName>Sales - EMC Referral</fullName>
                </value>
                <value>
                    <fullName>Sales - Pivotal Generated</fullName>
                </value>
                <value>
                    <fullName>Sales - VMware Referral</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Teleservices/Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pivotal Web Services Member</description>
        <label>PWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Rep_Email__c</fullName>
        <description>For deal registration via Marketo, the email of the registration account rep</description>
        <label>Partner Account Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Rep_Name__c</fullName>
        <description>For Partner Deal registration (inbound from Marketo form), the Sales Rep name at the registering partner.</description>
        <label>Partner Account Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Rep_Phone__c</fullName>
        <description>For deal registration via Marketo, the phone of the registration account rep</description>
        <label>Partner Account Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Functions__c</fullName>
        <label>Partner Business Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Strategic Management</fullName>
                </value>
                <value>
                    <fullName>Technology Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Cloud_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Cloud Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Industry_Verticals__c</fullName>
        <label>Partner Industry Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Product_Category__c</fullName>
        <label>Partner Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Provider</fullName>
                </value>
                <value>
                    <fullName>Industry-specific Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Sales_Manager_Email__c</fullName>
        <description>For deal registration via Marketo, the email of the registering sales manager</description>
        <label>Partner Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Manager_Name__c</fullName>
        <description>For deal registration via Marketo, the name of the registering sales manager</description>
        <label>Partner Sales Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Manager_Phone__c</fullName>
        <description>For deal registration via Marketo, the phone of the registering sales manager</description>
        <label>Partner Sales Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_ULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner ULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <label>Party ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <label>Party Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Customer_Number__c</fullName>
        <description>This field is only used when a customer self-registers on the Portal.  This is a request to be associated to a particular PCN.</description>
        <label>Pivotal Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>OSS</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Apps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product: Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_OSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Pivotal_One__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product: Pivotal One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Selection2__c</fullName>
        <label>Product Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
</CustomObject>